# neutron

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: PlatformConfig.cmake  ShaderCompilation.cmake
examples/: CMakeLists.txt
include/neutron/core/: base_app.h  entry_point.h
playground/: CMakeLists.txt
playground/source/: main.cpp
playground/source/core/: app.cpp  app.h
source/core/: base_app.cpp  entry_point.cpp
